NIAD-508 Patient resource added to the bundle