@@ -6,7 +6,9 @@ import org.hl7.fhir.r4.model.CodeableConcept;
 import org.hl7.fhir.r4.model.Coding;
 import org.hl7.fhir.r4.model.Composition;
 import org.hl7.fhir.r4.model.Identifier;
+import org.hl7.fhir.r4.model.Patient;
 import org.hl7.fhir.r4.model.Reference;
+import org.hl7.fhir.r4.model.Resource;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 import org.w3c.dom.Node;
@@ -14,14 +16,16 @@ import uk.nhs.adaptors.scr.utils.XmlUtils;
 
 import java.text.SimpleDateFormat;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
+
+import static uk.nhs.adaptors.scr.utils.FhirHelper.randomUUID;
 
 @Component
 @RequiredArgsConstructor(onConstructor = @__(@Autowired))
 public class GpSummaryMapper implements XmlToFhirMapper {
 
     private static final String DATE_TIME_PATTERN = "yyyyMMddHHmmss";
+    private static final String NHS_NUMBER_SYSTEM = "https://fhir.nhs.uk/Id/nhs-number";
 
     private static final String BASE_XPATH = "//QUPC_IN210000UK04/ControlActEvent/subject//GPSummary";
 
@@ -32,7 +36,6 @@ public class GpSummaryMapper implements XmlToFhirMapper {
     private static final String GP_SUMMARY_STATUS_CODE_XPATH = BASE_XPATH + "/statusCode/@code";
     private static final String GP_SUMMARY_EFFECTIVE_TIME_XPATH = BASE_XPATH + "/effectiveTime/@value";
 
-    private static final String RECORD_TARGET_PATIENT_ID_XPATH = BASE_XPATH + "/recordTarget/patient/id/@root";
     private static final String RECORD_TARGET_PATIENT_ID_EXTENSION_XPATH =
         BASE_XPATH + "/recordTarget/patient/id/@extension";
 
@@ -52,7 +55,7 @@ public class GpSummaryMapper implements XmlToFhirMapper {
     private final HtmlParser htmlParser;
 
     @SneakyThrows
-    public List<Composition> map(Node document) {
+    public List<Resource> map(Node document) {
         var simpleDateFormat = new SimpleDateFormat(DATE_TIME_PATTERN);
 
         var gpSummaryId =
@@ -67,8 +70,6 @@ public class GpSummaryMapper implements XmlToFhirMapper {
             XmlUtils.getValueByXPath(document, GP_SUMMARY_STATUS_CODE_XPATH);
         var gpSummaryEffectiveTime =
             simpleDateFormat.parse(XmlUtils.getValueByXPath(document, GP_SUMMARY_EFFECTIVE_TIME_XPATH));
-        var recordTargetPatientId =
-            XmlUtils.getValueByXPath(document, RECORD_TARGET_PATIENT_ID_XPATH);
         var recordTargetPatientIdExtension =
             XmlUtils.getValueByXPath(document, RECORD_TARGET_PATIENT_ID_EXTENSION_XPATH);
         var replacementOfPriorMessageRefIdRoot =
@@ -84,6 +85,7 @@ public class GpSummaryMapper implements XmlToFhirMapper {
                 .findFirst();
 
         var composition = new Composition();
+        composition.setId(randomUUID());
 
         composition.setIdentifier(
             new Identifier()
@@ -101,10 +103,9 @@ public class GpSummaryMapper implements XmlToFhirMapper {
 
         composition.setDate(gpSummaryEffectiveTime);
 
-        composition.setSubject(
-            new Reference().setIdentifier(new Identifier()
-                .setValue(recordTargetPatientIdExtension)
-                .setSystem(recordTargetPatientId)));
+        Patient patient = getSubject(recordTargetPatientIdExtension);
+
+        composition.setSubject(new Reference(patient));
 
         composition.addRelatesTo(
             new Composition.CompositionRelatesToComponent().setTarget(new Identifier()
@@ -122,7 +123,16 @@ public class GpSummaryMapper implements XmlToFhirMapper {
             .map(Collection::stream)
             .ifPresent(section -> section.forEach(composition::addSection));
 
-        return Collections.singletonList(composition);
+        return List.of(composition, patient);
+    }
+
+    private Patient getSubject(String recordTargetPatientIdExtension) {
+        Patient patient = new Patient();
+        patient.setId(randomUUID());
+        patient.addIdentifier(new Identifier()
+            .setValue(recordTargetPatientIdExtension)
+            .setSystem(NHS_NUMBER_SYSTEM));
+        return patient;
     }
 
     private static Composition.CompositionStatus mapCompositionStatus(String compositionStatus) {
@@ -133,10 +143,4 @@ public class GpSummaryMapper implements XmlToFhirMapper {
                 throw new IllegalArgumentException(String.format("Unable to map '%s'", compositionStatus));
         }
     }
-
-
-
-
-
-
 }
